update nextjs dependency and visual fix when invalid image is scanned

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -148,3 +148,8 @@
   margin: 0 !important;
   width: 100% !important;
 }
+
+#qr-canvas-visible {
+  height: 400px !important;
+  object-fit: cover;
+}
